@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020191013"
-#define public MagickPackageReleaseDate "snapshot-20191013"
+#define public MagickPackageVersionAddendum ".020191014"
+#define public MagickPackageReleaseDate "snapshot-20191014"
