@@ -1,3 +1,7 @@
+2019-10-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* configure.ac: Fix tcmalloc configuration report.
+
 2019-10-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* coders/wpg.c (ReadWPGImage): Implement subimage/subrange
